# coding-kata-tdd-as-if-you-meant-it

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  test.cpp
.devcontainer/: devcontainer.json
